--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
@@ -18,6 +17,7 @@
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.0.3",
+    "@angular/material-moment-adapter": "^15.0.3",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
