--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@fortawesome/fontawesome-free": "^6.3.0",
     "alertifyjs": "^1.13.1",
     "buffer": "^6.0.3",
     "rxjs": "~7.5.0",
